<resources>

    <!-- General app -->
    <string name="app_name">FitHub</string>

    <!-- Home page -->
    <string name="title_home">Home</string>

    <!-- Workout page -->
    <string name="title_workout">Workout</string>
    <string name="text_create_exercise">Create Exercise</string>
    <string name="button_text_create_exercise">&#xf067; Create Exercise</string>
    <string name="text_exercise_name">Exercise Name</string>
    <string name="text_exercise_type">Exercise Type</string>
    <string name="text_includes_incline">Track Incline?</string>
    <string name="text_includes_resistance">Track Resistance?</string>
    <string-array name="exercise_types">
        <item>Weight Training</item>
        <item>Cardio</item>
        <item>Body Exercise</item>
    </string-array>
    <string name="text_create_exercise_finish">Create Exercise</string>

    <!-- Exercise Detail page -->
    <string name="text_log_data">Log Data</string>
    <string name="text_no_data">No data</string>
    <string name="fieldname_weight_weight">Weight</string>
    <string name="fieldname_weight_numReps"># Reps</string>
    <string name="fieldname_cardio_distance">Distance</string>
    <string name="fieldname_cardio_duration">Duration</string>
    <string name="fieldname_cardio_incline">Incline</string>
    <string name="fieldname_cardio_resistance">Resistance</string>
    <string name="fieldname_body_numReps"># Reps</string>
    <string name="fieldname_body_duration">Duration</string>

    <!-- Analysis page -->
    <string name="title_analysis">Analysis</string>

    <!-- Goals page -->
    <string name="title_goals">Goals</string>

    <!-- Miscellaneous -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="text_today">Today</string>
    <string name="text_close">Close</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_back">Back</string>

    <!-- FontAwesome Icons -->
    <string name="fa_plus">&#xf067;</string>

    <!-- Java constants -->
    <string name="const_weight_exercise">weight_exercise</string>
    <string name="const_cardio_exercise">cardio_exercise</string>
    <string name="const_body_exercise">body_exercise</string>
    <string name="arg_exercise_id">exerciseId</string>
    <string name="arg_date_selected">dateSelected</string>
    <string name="const_mi_to_km_mult">1.60934</string>
    <string name="const_lb_to_kg_mult">0.4536</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
