<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context="com.louiswheeleriv.fithub.fragments.CreateExerciseFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView android:text="@string/text_create_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            style="@style/fragmentTitle"/>

        <TextView android:text="@string/text_exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mediumWhiteText"/>

        <EditText android:id="@+id/edit_text_exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:hint="e.g. Bench Press"
            android:imeOptions="actionDone"
            style="@style/edittext_custom_style"/>

        <TextView android:text="@string/text_exercise_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mediumWhiteText"/>

        <Spinner android:id="@+id/spinner_exercise_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            style="@style/spinner_custom_style"
            android:entries="@array/exercise_types">

        </Spinner>

        <LinearLayout android:id="@+id/linearLayout_include_incline_resistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox android:id="@+id/checkbox_includes_incline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/text_includes_incline"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"/>

            <CheckBox android:id="@+id/checkbox_includes_resistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/text_includes_resistance"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"/>

        </LinearLayout>

        <Button android:id="@+id/button_create_exercise_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_create_exercise_finish"
            android:enabled="false"
            style="@style/orangeButton"/>

    </LinearLayout>

</FrameLayout>
