<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.louiswheeleriv.fithub.fragments.AddBodyInstanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView android:id="@+id/textView_create_body_instance_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingRight="15dp"
                android:gravity="right"
                android:textColor="@color/black"
                android:text="@string/fieldname_body_numReps"/>

            <EditText android:id="@+id/editText_create_body_instance_numReps"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingRight="15dp"
                android:gravity="right"
                android:textColor="@color/black"
                android:text="@string/fieldname_body_duration"/>

            <EditText android:id="@+id/editText_create_body_instance_duration"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button android:id="@+id/button_create_body_instance_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_margin="15dp"
                android:text="@string/text_cancel"
                style="@style/grayButton"/>

            <Button android:id="@+id/button_create_body_instance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_margin="15dp"
                android:text="@string/text_log_data"
                style="@style/orangeButton"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
