<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.louiswheeleriv.fithub.fragments.AddCardioInstanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical">

        <TextView android:id="@+id/textView_create_cardio_instance_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingRight="15dp"
                android:gravity="right"
                android:textColor="@color/black"
                android:text="@string/fieldname_cardio_distance"/>

            <EditText android:id="@+id/editText_create_cardio_instance_distance"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingRight="15dp"
                android:gravity="right"
                android:textColor="@color/black"
                android:text="@string/fieldname_cardio_duration"/>

            <EditText android:id="@+id/editText_create_cardio_instance_duration"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/linearLayout_create_cardio_instance_incline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingRight="15dp"
                android:gravity="right"
                android:textColor="@color/black"
                android:text="@string/fieldname_cardio_incline"/>

            <EditText android:id="@+id/editText_create_cardio_instance_incline"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/linearLayout_create_cardio_instance_resistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingRight="15dp"
                android:gravity="right"
                android:textColor="@color/black"
                android:text="@string/fieldname_cardio_resistance"/>

            <EditText android:id="@+id/editText_create_cardio_instance_resistance"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button android:id="@+id/button_create_cardio_instance_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_margin="15dp"
                android:text="@string/text_cancel"
                style="@style/grayButton"/>

            <Button android:id="@+id/button_create_cardio_instance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_margin="15dp"
                android:text="@string/text_log_data"
                android:enabled="false"
                style="@style/orangeButton"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
